--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,90 +1,117 @@
+/* Global Styles */
+
 * {
     box-sizing: border-box;
-}
+    margin: 0;
+    padding: 0;
+    }
+
+/* Body Styles */
 
 body {
-    font-family: Arial;
-    margin: 0;
+    font-family: sans-serif;
+    background-color: #ffffff;
+    }
+
+/* Header Styles */
+
+header {
+    background-color: #ffffff;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: black;
+    }
+
+/* Navbar Styles */
+
+.navbar {
+    list-style-type: none;
+    margin-right: 10px;
 }
+
+.navbar li a {
+    text-decoration: none;
+    color: #ffffff;
+    }
+
+.navbar li a:hover {
+    color: #666;
+    }
+
+/* Main Styles */
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: right;
+    }
+
+/* Aside Styles */
+
+aside {
+    flex: 1;
+    background-color: #ffffff;
+    padding: 20px;
+    color: black;
+    }
+
+/* Section Styles */
+
+section {
+    flex: 2;
+    padding: 20px;
+    color: black;
+    }
+
+/* ID Styles */
+
+#SSS,
+#MCS,
+#LPC {
+    height: 100px;
+    width: 100px;
+    }
+
+#SUSTECH {
+    height: 100px;
+    width: 200px;
+    }
+
+/* Class Styles */
 
 .CONTAINER {
     position: relative;
     text-align: center;
     color: white;
-}
+    }
 
-/* Bottom left text */
-.BOTTOM-LEFT {
+.BOTTOM-RIGHT {
     position: absolute;
     bottom: 8px;
     right: 16px;
-}
-
-/* Reset default styles */
-body, h1, ul {
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #f2f2f2;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.title {
-    font-size: 24px;
-}
-
-.navbar {
-    list-style-type: none;
-}
-
-.navbar li {
-    display: inline-block;
-    margin-right: 10px;
     }
 
-.navbar li a {
-    text-decoration: none;
-    color: #333;
-        }
+/* ID Specific Styles */
 
-.navbar li a:hover {
-    color: #666;
-}
+#ABOUT-ME {
+    height: 180px;
+    border-right: solid;
+    }
 
-main {
-    display: flex;
-    flex-wrap: wrap;
-}
+#WORK {
+    height: 80px;
+    text-align: right;
+    border-right: solid;
+    }
 
-aside {
-    flex: 2;
-    background-color: #b9c6ae;
-    padding: 20px;
-}
+#CONTACT-ME {
+    height: 30px;
+    text-align: right;
+    border-right: solid;
+    }
 
-@media screen and (max-width: 768px) {
-}
-#SSS {
-    height: 75px;
-    width: 75px;
-}
-
-#MCS {
-    height: 75px;
-    width: 75px;
-}
-
-#LPC {
-    height: 75px;
-    width: 75px;
-}
-
-#SUSTECH {
-    height: 75px;
-    width: 150px;
-}
+#ABOUT-ME-PARAGRAPH {
+    height: 180px;
+    }
