--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,8 +1,15 @@
-﻿/* Reset CSS */
-
-/* Global Styles */
+﻿/*This resets the styling of all elements in webpage.*/
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     }
+/*This resets the styling of element rules*/
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    line-height: 1;
+    font-family: sans-serif;
